# ci-test

./: .gitignore  CMakeLists.txt  Dockerfile.test
.github/: run-in-container.sh  run.sh
.github/workflows/: main.yml
.woodpecker/: cpp.yaml  go.yaml
go/: go.mod
scripts/: build-cpp.sh  build-go.sh
